tests/purs/failing/LocalTypeSynonyms7.out
Error found:
in module [33mMain[0m
at tests/purs/failing/LocalTypeSynonyms7.purs:7:3 - 7:27 (line 7, column 3 - line 7, column 27)

  Type argument [33ma[0m appears more than once.

in type synonym [33mDoubleArg[0m
while checking that expression [33mresult      [0m
                               [33m  where     [0m
                               [33m  result = 0[0m
  has type [33mInt[0m
in value declaration [33mtest[0m

See https://github.com/purescript/documentation/blob/master/errors/DuplicateTypeArgument.md for more information,
or to contribute content related to this error.

